<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/nav_dashboard"/>
        <item
            android:id="@+id/nav_work_order"
            android:icon="@drawable/work_order"
            android:title="@string/nav_work_order" />
        <item
            android:id="@+id/nav_machine_model"
            android:icon="@drawable/machine_details"
            android:title="@string/nav_machine_model" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/payment"
            android:title="@string/associate_owner" />
    </group>

    <group android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <!--<item
            android:id="@+id/nav_myprofile"
            android:icon="@drawable/myprofile"
            android:title="@string/nav_myprofile" />-->
        <item
            android:id="@+id/nav_invite_other"
            android:icon="@drawable/invite_other"
            android:title="@string/nav_invite_other" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/change_password"
            android:title="@string/nav_change_password" />
        <item
            android:id="@+id/nav_account_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_account_setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/nav_logout" />
    </group>


</menu>