<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_owner_header"
        android:layout_marginTop="8dp"
        android:layout_alignParentTop="true">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="About Owner"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_below="@+id/about_owner_header">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ownerQ1"
        android:textColor="@android:color/black"
        android:textSize="16sp"/>
    <androidx.appcompat.widget.AppCompatRatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_owner_rating_one"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ownerQ2"
        android:textColor="@android:color/black"
        android:textSize="16sp"/>
    <androidx.appcompat.widget.AppCompatRatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_owner_rating_two"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ownerQ3"
        android:textColor="@android:color/black"
        android:textSize="16sp"/>
    <androidx.appcompat.widget.AppCompatRatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_owner_rating_three"
        android:layout_gravity="center"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ownerQ4"
        android:textColor="@android:color/black"
        android:textSize="16sp"/>
    <androidx.appcompat.widget.AppCompatRatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_owner_rating_four"
        android:layout_gravity="center"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:hint="Comment">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:id="@+id/about_owner_user_comment"/>
        </com.google.android.material.textfield.TextInputLayout>


   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.8"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Comment"
            android:textColor="@color/colorPrimary"
            app:fontFamily="@font/colabbol"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="Write here"
            android:id="@+id/about_owner_user_comment"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:background="@drawable/rect_bg_white_border_primary"/>
    </LinearLayout>-->
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_owner_save"
        android:src="@drawable/save_record_two"
        app:backgroundTint="@null"
        android:backgroundTint="@color/theme_orange"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:maxImageSize="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>
</RelativeLayout>