<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainDetailsFragment.AboutMachineFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_machine_header"
        android:layout_marginTop="8dp"
        android:layout_alignParentTop="true">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="About Machine"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_machine_header"
        android:orientation="vertical"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/machineQ1"
        android:textColor="@android:color/black"
       android:textSize="16sp"/>
    <androidx.appcompat.widget.AppCompatRatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_machine_rating_one"
        android:layout_gravity="center_horizontal"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/machineQ2"
        android:textColor="@android:color/black"
       android:textSize="16sp"/>
    <androidx.appcompat.widget.AppCompatRatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_machine_rating_two"
        android:layout_gravity="center_horizontal"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/machineQ3"
        android:textColor="@android:color/black"
        android:textSize="16sp"/>
    <androidx.appcompat.widget.AppCompatRatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_machine_rating_three"
        android:layout_gravity="center_horizontal"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/machineQ4"
        android:textColor="@android:color/black"
       android:textSize="16sp"/>
    <androidx.appcompat.widget.AppCompatRatingBar
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/about_machine_rating_four"
        android:layout_gravity="center_horizontal"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:hint="Comment">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:id="@+id/about_machine_user_comment"/>
        </com.google.android.material.textfield.TextInputLayout>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.4"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Comment"
            android:textColor="@color/colorPrimary"
            app:fontFamily="@font/colabbol"
            android:textSize="16dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:id="@+id/about_machine_user_comment"
            android:hint="Write here"
            android:gravity="start"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:background="@drawable/rect_bg_white_border_primary"/>
    </LinearLayout>-->
    </LinearLayout>
   <!-- <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_machine_footer"
        android:layout_marginBottom="8dp"
        android:layout_alignParentBottom="true">
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_machine_save"
        android:text="Save"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:background="@drawable/button_shape"/>
    </RelativeLayout>-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_machine_save"
        android:src="@drawable/save_record_two"
        app:backgroundTint="@null"
        android:backgroundTint="@color/theme_orange"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:maxImageSize="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>